--- a/scss/_redes.scss
+++ b/scss/_redes.scss
@@ -5,7 +5,7 @@
 	-moz-transition: .5s;
 	-webkit-transition: .5s;
 	transition: .5s;
-	background-color: #322f30;
+	background-color: #ffffff;
 }
 	
 .btn--.fa-facebook {
@@ -29,8 +29,11 @@
 }
 
 
-
-
+.redes{
+	border: #ffffff00;
+	justify-content: center;
+	margin-left: 150px;
+}
 
 h2 {
 	margin: 1% 0 1% 0;
