--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -4,70 +4,84 @@ body {
 	background-repeat: repeat-x;
 	background-color: rgb(0, 0, 0);
 	background-size: 35%;
-	grid-template-columns: repeat (2, 1fr);
+	grid-template-columns: repeat (1, 1fr);
 	grid-row-start: auto;
+	overflow: auto;
 }
 
 nav {
 	font-family: 'press start 2P', cursi ve;
 	color: rgb(72, 58, 90);
-	border: rgb(124, 124, 124) 1px solid;
     background-color: black;
-	padding: 15px;
+	padding: 20px;
 	margin: 140px;
+	margin-right: 100px;
 }
 
-section {
+.componentes {
 	grid-area: section;
 }
+
 header {
 	display: grid;
-	grid-template-columns: 1fr;
+	grid-template-columns: (1);
 }
 
 main {
     display: grid;
-    grid-template-areas: "section publicidad" "section publicidad" "section publicidad" "section publicidad";
+    grid-template-areas: "section section section" "section section section" "section section section" "section section section";
+	margin-top: 20px;
+	margin-left: 80px;
+	margin-right: 80px;
 }
 
-.contenedorPadre {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	margin: 25px;
-}
 
 #nosotros{
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 30px;
 	color: beige;
-	margin-bottom: 400px;
+	margin-bottom: 200px;
 	margin-left: 300px;
 	margin-right: 300px;
 	background-color: rgba(75, 51, 97, 0.295);
 	border: rgba(75, 51, 97, 0.712) 2px solid;
+	overflow: auto;
 }
 
 #nos {
 	text-align: center;
 	margin-top: 100px;
-	border: rgba(75, 51, 97, 0.712) 2,5px solid;
-	margin-left: 550px;
-	margin-right: 550px;
 }   
 
+
+
+.contenedorPadre {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	margin: 20px;
+}
 
 .componentes {
 	display: flex;
 	flex-direction: row;
 	margin: 40px;
-	width: 40%;
-	height: 300px;
+	width: 26%;
+	height: 370px;
 	border: rgba(74, 39, 121, 0.747) 1px solid;
 	&:hover {
-		transform: scale(110%, 110%);
-		border:#d9d9d9 solid 2px;
+		transform: scale(113%, 113%);
+		border:#d9d9d9 solid 3px;
 	}
 }
 
+.carousel {
+	justify-content: center;
+	width: 100%; 
+    max-width: 1000px;
+	margin-top: 50px;
+	margin-left: 450px;
+	margin-bottom: 150px;
+	border:rgba(74, 39, 121, 0.747) solid 2px;
+}
