--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,25 +1,131 @@
 @media only screen and(min-width: 1024px) {
 	header {
-		grid-template-columns: 1fr;
+		grid-template-columns: (1, 1fr);
 	}
-	main {
-		grid-template-columns: repeat (4, 1fr);
-	}
+
+	body{
+		grid-template-columns: repeat (1, 1fr);
+		overflow-x: hidden;
+	}	
+	
 }
-@media only screen and(max-width: 768px) {
-	header {
-		grid-template-columns: 1fr;
-	}
-	main {
-		grid-template-columns: repeat (3, 1fr);
-	}
-}
+
 @media only screen and(min-width: 768px) {
 	header {
-		grid-template-columns: 1fr;
+		grid-template-columns: (1, 1fr);
 	}
-	body {
-		grid-template-columns: repeat (2, 1fr);
-		grid-row-start: auto;
+
+	body{
+		grid-template-columns: repeat (1, 2fr);
+	}	
+
+	.contenedorPadre{
+		display: flex;
+		flex-direction: row;
+		align-content: space-between;
 	}
+	
 }
+
+@media only screen and(max-width: 768px) {
+	header {
+		grid-template-columns: (1, 1fr);
+		margin-bottom: 40px;
+		display: block;
+	}
+
+	body{
+		grid-template-columns: repeat (1,1fr);
+	}
+
+
+
+	#tabla{
+		display: initial;
+	}
+
+	.pelis{
+		grid-template-columns: 190% auto 10%;
+		margin-top: 120px;
+		margin-left: 15px;
+		display: flex;
+		flex-direction: column;
+	}
+
+	#carouselExampleControls{
+		margin-top: 150px;
+		margin-left: 2px;
+	}
+
+	.componentes{
+		border:#72000000 solid 3px;
+		&:hover {
+			border: rgba(74, 39, 121, 0.747) solid 3px;
+			transform: scale(100%, 100%);
+		}
+	}
+
+	.tablon {
+		margin-top: 200px;
+		align-content: initial;
+		margin-bottom: 60px;
+		padding: 150px;
+		margin-right: 70px;
+		}
+
+	#coment{
+		width: 200px;
+		height: 300px;
+		margin-right: 50px;
+	}
+
+	#nos{
+		height: 00px;
+		width: 0px;
+		display: flex;
+		flex-direction: row;
+	}
+
+	#nosotros{
+		margin: 0px;
+	}
+	
+	#grid{
+		height: 100px;
+		display: initial;
+	}
+
+
+
+	.contenedorPadre{
+		grid-template-columns: repeat (1,1fr);
+		justify-content: center;
+		display: flex;
+		flex-direction: column;
+	}
+
+	footer{
+		margin-top: 200px;
+	}
+
+	nav{
+		margin: 10px;
+	}
+
+
+	.encabezado {
+		margin-left: 3px;
+		text-align: left;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		background-color: rgb(0, 0, 0);
+	}
+
+	h1{
+		display: flex;
+		flex-direction: column;
+	}
+
+}
+
