--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,20 +30,17 @@ $font:80px;
 $fuente: Arial, Helvetica, sans-serif;
 
 
-
-
-
 h1 {
 	font-family: $fuente;
 	color: rgb(255, 255, 255);
 	font-size: $font;
 	background-color: rgb(0, 0, 0);
-	padding-top: 20px;
+	padding-top: 4px;
 	height: 100px;
 	text-align: center;
 	border: double;
 	border-color: rgba(74, 39, 121, 0.747);
-	margin: 1% 0 1% 0;
+	margin: 2% 0 1% 0;
 	&:hover {
 		opacity: 1;
 		animation-name: cinecatodico;
@@ -51,17 +48,6 @@ h1 {
 		animation-iteration-count: infinite;
 		animation-timing-function: ease-in;
 	}
-}
-
-
-
-.publicidad {
-	font-family: $fuente;
-	color: rgb(255, 255, 255);
-	font-size: $font/2;
-	padding-top: 40px;
-	margin-right: 5px;
-	grid-area: publicidad;
 }
 
 #titulo {
@@ -84,21 +70,31 @@ font-weight: bold;
 color: blanchedalmond;
 font-size: $font/4px;
 background-color: rgb(72, 58, 90);
-margin-bottom: 100px;
-margin: 25px;
-padding: 15px;
+margin-bottom: 60px;
+margin-right: 100px;
+margin-left: 100px;
+margin-top: 100px;
 border: solid;
 border-color: rgb(255, 255, 255);
+padding: 40px;
+align-content: center;
 }
+
+
 
 .pelicula {
 	font-family: $fuente;
+	font-size: 19px;
 	background-color: rgb(72, 58, 90);
-	color: rgb(0, 0, 0);
+	color: rgba(0, 0, 0, 0.705);
 	font-weight: bold;
-	padding: 5px;
-	overflow: auto;
-}
+	padding: 7px;
+	padding-top: 10px;
+	&:hover {
+		color:rgb(0, 0, 0);}
+	}
+
+
 .contacto {
 	font-family: $fuente;
 	color: rgb(255, 255, 255);
@@ -109,16 +105,29 @@ border-color: rgb(255, 255, 255);
 	padding-bottom: 1px;
 }
 
+.we{
+	display: inline-block;
+}
 
 
-h4 {
-	font-weight: normal;
-	color: blanchedalmond;
-	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+.diseñador {
+	color: rgb(145, 144, 142);
+	font-family: $fuente;
 	margin: 1% 0 1% 0;
+	margin-top: 70px;
     }
 
-
+h5 {
+	font-size: 150px;
+	font-family: $fuente;
+	color:rgba(69, 42, 104, 0.788);
+	border-radius: #fff;
+	font: bold;
+	margin-bottom: 130px;
+	text-justify: center;
+	text-align: center;
+	margin-right: 30px;
+}
 
 a {
 	text-decoration: none;
@@ -134,21 +143,3 @@ p {
 }
 
 
-@media only screen and (min-width: 1024px) {
-	header {
-	  grid-template-columns: 1fr; }
-	main {
-	  grid-template-columns: repeat 4, 1fr; } }
-  
-  @media only screen and (max-width: 768px) {
-	header {
-	  grid-template-columns: 1fr; }
-	main {
-	  grid-template-columns: repeat 3, 1fr; } }
-  
-  @media only screen and (min-width: 768px) {
-	header {
-	  grid-template-columns: 1fr; }
-	body {
-	  grid-template-columns: repeat 2, 1fr;
-	  grid-row-start: auto; } }
