--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -6,7 +6,10 @@
 	body{
 		grid-template-columns: repeat (1, 1fr);
 		overflow-x: hidden;
+	}
+	
 }
+
 
 @media only screen and(min-width: 768px) {
 	header {
@@ -14,25 +17,26 @@
 	}
 
 	body{
-		grid-template-columns: repeat (1, 2fr);
-	}	
-
-	}	
+		grid-template-columns: repeat (1, 1fr);
+		margin-bottom: 40px;
+	}		
 
 	.contenedorPadre{
 		display: flex;
 		flex-direction: row;
 		align-content: space-between;
 	}
-	
-	
+		
+		h5 a {
+	position: relative;
+	}
+
 }
 
 @media only screen and(max-width: 768px) {
 	header {
 		grid-template-columns: (1, 1fr);
 		margin-bottom: 40px;
-		display: block;
 	}
 
 	body{
@@ -41,6 +45,16 @@
 		background-size: 95%;
 	}
 
+	.gen{
+		font-size: 40px;
+		margin-top: 120px;
+		justify-content: center;
+	}
+	
+	hr{
+		border: solid 1px;
+		border-color: rgb(112, 112, 112);
+	}
 
 	#tabla{
 		display: initial;
@@ -48,31 +62,39 @@
 
 	.pelis{
 		grid-template-columns: 190% auto 10%;
-		margin-top: 120px;
+		margin-top: 10px;
 		margin-left: 15px;
 		display: flex;
 		flex-direction: column;
 	}
 
-	#carouselExampleControls{
-		margin-top: 150px;
+	.carousel{
+		margin-top: 170px;
 		margin-left: 2px;
-	}
+		margin-right: 3px;
+	  }
+	  
+	  h5 a {
+		font-size: 100px;
+		position: absolute;
+		}
+
 
 	.componentes{
 		border:#72000000 solid 3px;
 		&:hover {
 			border: rgba(74, 39, 121, 0.747) solid 3px;
-			transform: scale(100%, 100%);
+			transform: scale(105%, 105%);
 		}
 	}
 
 	.tablon {
 		margin-top: 200px;
 		align-content: initial;
-		margin-bottom: 60px;
-		padding: 150px;
-		margin-right: 70px;
+		margin-bottom: 30px;
+		padding: 100px;
+		margin-right: 40px;
+		font-size: 10px;
 		}
 
 	#coment{
@@ -97,8 +119,6 @@
 		display: initial;
 	}
 
-
-
 	.contenedorPadre{
 		grid-template-columns: repeat (1,1fr);
 		justify-content: center;
@@ -107,13 +127,12 @@
 	}
 
 	footer{
-		margin-top: 200px;
+		margin-top: 80px;
 	}
 
 	nav{
 		margin: 10px;
 	}
-
 
 	.encabezado {
 		margin-left: 3px;
@@ -121,13 +140,12 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		background-color: rgba(0, 0, 0, 0.507);
+		background-color: rgba(0, 0, 0, 0.678);
 	}
-
+	
 	h1{
 		display: flex;
 		flex-direction: column;
-	}
-
+		margin-bottom: 300px;
 }
-
+}
