--- a/css/estilo.css
+++ b/css/estilo.css
@@ -75,7 +75,7 @@ main {
   text-align: center;
   width: 100%;
   max-width: 1000px;
-  margin-top: 50px;
+  margin-top: 100px;
   margin-left: 450px;
   margin-bottom: 150px; }
 
@@ -130,14 +130,14 @@ ul {
     grid-template-columns: 1, 1fr; }
   body {
     grid-template-columns: repeat 1, 1fr;
-    overflow-x: hidden; } }
+    background-size: 40%; } }
 
 @media only screen and (min-width: 768px) {
   header {
     grid-template-columns: 1, 1fr; }
   body {
-    grid-template-columns: repeat 1, 1fr;
-    margin-bottom: 40px; }
+    grid-template-columns: repeat-x 1, 1fr;
+    background-size: 40%; }
   .contenedorPadre {
     display: flex;
     flex-direction: row;
@@ -147,29 +147,37 @@ ul {
 
 @media only screen and (max-width: 768px) {
   header {
-    grid-template-columns: 1, 1fr;
-    margin-bottom: 40px; }
+    display: flex;
+    grid-template-columns: 1, 1fr; }
+  h1 {
+    display: none; }
   body {
-    grid-template-columns: repeat 1, 1fr;
     background-repeat: repeat-x;
     background-size: 95%; }
+  nav {
+    padding: 0px;
+    margin: 0px;
+    margin-right: 0px; }
   .gen {
-    font-size: 40px;
-    margin-top: 120px;
-    justify-content: center; }
+    font-size: 30px;
+    margin-top: 10px;
+    justify-content: center;
+    padding-left: 140px;
+    padding-top: 15px;
+    height: 10px; }
   hr {
     border: solid 1px;
-    border-color: #707070; }
+    border-color: #707070;
+    margin-bottom: 0px; }
   #tabla {
     display: initial; }
   .pelis {
-    grid-template-columns: 190% auto 10%;
-    margin-top: 10px;
-    margin-left: 15px;
+    margin-top: 0px;
+    margin-left: 6px;
     display: flex;
     flex-direction: column; }
   .carousel {
-    margin-top: 170px;
+    margin-top: 90px;
     margin-left: 2px;
     margin-right: 3px; }
   h5 a {
@@ -181,46 +189,41 @@ ul {
       border: rgba(74, 39, 121, 0.747) solid 3px;
       transform: scale(105%, 105%); }
   .tablon {
-    margin-top: 200px;
-    align-content: initial;
-    margin-bottom: 30px;
-    padding: 100px;
-    margin-right: 40px;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    margin-right: 0px;
     font-size: 10px; }
   #coment {
     width: 200px;
     height: 300px;
     margin-right: 50px; }
   #nos {
-    height: 00px;
+    margin-top: 50px;
+    height: 0px;
     width: 0px;
     display: flex;
     flex-direction: row; }
   #nosotros {
-    margin: 0px; }
+    margin: 0px;
+    margin-top: 30px; }
   #grid {
     height: 100px;
     display: initial; }
   .contenedorPadre {
+    margin-top: 80px;
     grid-template-columns: repeat 1, 1fr;
     justify-content: center;
     display: flex;
     flex-direction: column; }
   footer {
     margin-top: 80px; }
-  nav {
-    margin: 10px; }
   .encabezado {
     margin-left: 3px;
     text-align: left;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.678); }
-  h1 {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 300px; } }
+    background-color: rgba(0, 0, 0, 0.678); } }
 
 .btn--.fa-facebook {
   padding: 10px 14px;
@@ -319,8 +322,7 @@ h1 {
   height: 100px;
   text-align: center;
   border: double;
-  border-color: rgba(74, 39, 121, 0.747);
-  margin: 2% 0 1% 0; }
+  border-color: rgba(74, 39, 121, 0.747); }
   h1:hover {
     opacity: 1;
     animation-name: cinecatodico;
