--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,3 +1,4 @@
+
 @media only screen and(min-width: 1024px) {
 	header {
 		grid-template-columns: (1, 1fr);
@@ -5,8 +6,10 @@
 
 	body{
 		grid-template-columns: repeat (1, 1fr);
-		overflow-x: hidden;
+		background-size: 40%;
+	
 	}
+
 	
 }
 
@@ -17,8 +20,9 @@
 	}
 
 	body{
-		grid-template-columns: repeat (1, 1fr);
-		margin-bottom: 40px;
+		grid-template-columns: repeat-x (1, 1fr);
+		background-size: 40%;
+		
 	}		
 
 	.contenedorPadre{
@@ -30,30 +34,43 @@
 		h5 a {
 	position: relative;
 	}
-
 }
 
 @media only screen and(max-width: 768px) {
 	header {
+		display: flex; 
 		grid-template-columns: (1, 1fr);
-		margin-bottom: 40px;
+		
 	}
+	
+	h1 {
+		display:none
+	}
+	
 
 	body{
-		grid-template-columns: repeat (1,1fr);
 		background-repeat: repeat-x;
 		background-size: 95%;
 	}
+	nav{
+		padding: 0px;
+		margin: 0px;
+		margin-right: 0px;
+	}
 
 	.gen{
-		font-size: 40px;
-		margin-top: 120px;
+		font-size: 30px;
+		margin-top: 10px;
 		justify-content: center;
+		padding-left: 140px;	
+		padding-top: 15px;
+		height: 10px;
 	}
 	
 	hr{
 		border: solid 1px;
 		border-color: rgb(112, 112, 112);
+		margin-bottom: 0px;
 	}
 
 	#tabla{
@@ -61,15 +78,14 @@
 	}
 
 	.pelis{
-		grid-template-columns: 190% auto 10%;
-		margin-top: 10px;
-		margin-left: 15px;
+		margin-top: 0px;
+		margin-left: 6px;
 		display: flex;
 		flex-direction: column;
 	}
 
 	.carousel{
-		margin-top: 170px;
+		margin-top: 90px;
 		margin-left: 2px;
 		margin-right: 3px;
 	  }
@@ -89,13 +105,13 @@
 	}
 
 	.tablon {
-		margin-top: 200px;
-		align-content: initial;
-		margin-bottom: 30px;
-		padding: 100px;
-		margin-right: 40px;
+		margin-top: 60px;
+		margin-bottom: 20px;
+		margin-right: 0px;
 		font-size: 10px;
 		}
+		
+
 
 	#coment{
 		width: 200px;
@@ -104,7 +120,8 @@
 	}
 
 	#nos{
-		height: 00px;
+		margin-top: 50px;
+		height: 0px;
 		width: 0px;
 		display: flex;
 		flex-direction: row;
@@ -112,6 +129,7 @@
 
 	#nosotros{
 		margin: 0px;
+		margin-top:30px;
 	}
 	
 	#grid{
@@ -120,6 +138,7 @@
 	}
 
 	.contenedorPadre{
+		margin-top: 80px;
 		grid-template-columns: repeat (1,1fr);
 		justify-content: center;
 		display: flex;
@@ -130,10 +149,6 @@
 		margin-top: 80px;
 	}
 
-	nav{
-		margin: 10px;
-	}
-
 	.encabezado {
 		margin-left: 3px;
 		text-align: left;
@@ -142,10 +157,6 @@
 		justify-content: space-between;
 		background-color: rgba(0, 0, 0, 0.678);
 	}
-	
-	h1{
-		display: flex;
-		flex-direction: column;
-		margin-bottom: 300px;
-}
+
+
 }
