--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,14 +33,13 @@ $fuente: Arial, Helvetica, sans-serif;
 h1 {
 	font-family: $fuente;
 	color: rgb(255, 255, 255);
-	font-size: $font;
+	font-size: 80px;
 	background-color: rgb(0, 0, 0);
 	padding-top: 4px;
 	height: 100px;
 	text-align: center;
 	border: double;
 	border-color: rgba(74, 39, 121, 0.747);
-	margin: 2% 0 1% 0;
 	&:hover {
 		opacity: 1;
 		animation-name: cinecatodico;
@@ -49,6 +48,8 @@ h1 {
 		animation-timing-function: ease-in;
 	}
 }
+
+
 
 #titulo {
 	font-family: $fuente;
@@ -89,7 +90,6 @@ align-content: center;
 	padding-left: 140px;	
 	padding-top: 15px;
 	height: 70px;
-	
 }
 
 hr{
